# cpu_emulator

./: .gitignore  CMakeLists.txt  build.sh  program.S  program.asm  readme.md  run.sh
examples/: heap_example.asm  hello_world_example.asm  stack_example.asm
src/: assembler.c  assembler.h  defer.h  emulator.c  emulator.h  file.h  main.c  modern_types.h  printf_color.h
